changed path src for image

--- a/main/index.html
+++ b/main/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="part1">
-            <img src="resources/3004416.png" height="20px">
+            <img src="/resources/3004416.png" height="20px">
             <h3 class="proverbs_title">Proverbs</h3>
         </div>
 
@@ -35,13 +35,13 @@
         </div>
 
         <div class="page_image">
-            <img class="page-image" src="resources/religious-illustration_160308-855-removebg.png" width="350px">
+            <img class="page-image" src="/resources/religious-illustration_160308-855-removebg.png" width="350px">
         </div>
     </div>
 
     <script>
         function exploreClicked() {
-            window.location.href = 'Proverbs/index.html';
+            window.location.href = '/Proverbs/index.html';
         }
     </script>
 </body>
