changed path for Proverbs Index

--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -36,6 +36,6 @@
     </div>  
     
     
-    <script src="./script.js" type="module"/>
+    <script src="script.js" type="module"/>
 </body>
 </html>
