fixed relative path for proverbs index to home

--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="part2">
-            <a class="home_button" href="/main/index.html">
+            <a class="home_button" href="../main/index.html">
                 <h3>Home</h3>
             </a>
             <a class="about_button" href="">
