--- a/main/index.html
+++ b/main/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proverbs</title>
 
-    <link rel="stylesheet" href="pageStyle.css">
+    <link rel="stylesheet" href="./pageStyle.css">
 </head>
 <body>
     <nav>
         <div class="part1">
-            <img src="/resources/3004416.png" height="20px">
+            <img src="../resources/3004416.png" height="20px">
             <h3 class="proverbs_title">Proverbs</h3>
         </div>
 
@@ -35,13 +35,13 @@
         </div>
 
         <div class="page_image">
-            <img class="page-image" src="/resources/religious-illustration_160308-855-removebg.png" width="350px">
+            <img class="page-image" src="../resources/religious-illustration_160308-855-removebg.png" width="350px">
         </div>
     </div>
 
     <script>
         function exploreClicked() {
-            window.location.href = '/Proverbs/index.html';
+            window.location.href = '../Proverbs/index.html';
         }
     </script>
 </body>
