--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proverbs</title>
 
-    <link rel="stylesheet" href="proverbsStyle.css">
+    <link rel="stylesheet" href="./proverbsStyle.css">
 </head>
 <body>
     <nav>
