--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="part2">
-            <a class="home_button" href="../main/index.html">
+            <a class="home_button" href="../index.html">
                 <h3>Home</h3>
             </a>
             <a class="about_button" href="">
@@ -36,6 +36,6 @@
     </div>  
     
     
-    <script src="./script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
