--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Proverbs</title>
 
     <link rel="stylesheet" href="./pageStyle.css">
-    <link rel="icon" type="image/x-icon" href="resources/3004416.png">
+    <link rel="icon" type="image/x-icon" href="../resources/3004416.png">
 </head>
 <body>
     <nav>
