--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -6,6 +6,7 @@
     <title>Proverbs</title>
 
     <link rel="stylesheet" href="./proverbsStyle.css">
+    <link rel="icon" type="image/x-icon" href="../resources/3004416.png">
 </head>
 <body>
     <nav>
