--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="page_image">
-            <img class="page-image" src="" width="350px">
+            <img class="page-image" src="resources/religious-illustration_160308-855-removebg.png" width="350px">
         </div>
     </div>
 
