changed path for image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="part1">
-            <img src="resources/3004416.png" height="20px">
+            <img src="../resources/3004416.png" height="20px">
             <h3 class="proverbs_title">Proverbs</h3>
         </div>
 
