changed path for images

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Proverbs</title>
 
     <link rel="stylesheet" href="./pageStyle.css">
-    <link rel="icon" type="image/x-icon" href="../resources/3004416.png">
+    <link rel="icon" type="image/x-icon" href="resources/3004416.png">
 </head>
 <body>
     <nav>
         <div class="part1">
-            <img src="../resources/3004416.png" height="20px">
+            <img src="resources/3004416.png" height="20px">
             <h3 class="proverbs_title">Proverbs</h3>
         </div>
 
@@ -19,7 +19,7 @@
             <a class="home_button" href="#">
                 <h3>Home</h3>
             </a>
-            <a class="about_button" href="">
+            <a class="about_button" href="#">
                 <h3 >About</h3>
             </a>
         </div>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="page_image">
-            <img class="page-image" src="../resources/religious-illustration_160308-855-removebg.png" width="350px">
+            <img class="page-image" src="resources/religious-illustration_160308-855-removebg.png" width="350px">
         </div>
     </div>
 
