added search by keyword function

--- a/Proverbs/index.html
+++ b/Proverbs/index.html
@@ -19,11 +19,16 @@
             <a class="home_button" href="../index.html">
                 <h3>Home</h3>
             </a>
-            <a class="about_button" href="">
+            <a class="about_button" href="#">
                 <h3 >About</h3>
             </a>
         </div>
     </nav>
+
+    <div class="search-holder">
+        <input class="myInput" type="text" placeholder="Search by keyword.."/>
+    </div> 
+
     <div class="flex-container">
         <div class="chapter-holder">
             <h1 class="c-title">Chapters</h1>
@@ -36,7 +41,7 @@
         </div>
     </div>  
     
-    
     <script src="./script.js" type="module"></script>
+    <!-- <script src="./searchFunction.js" type="module"></script> -->
 </body>
 </html>
